# repository-template-rust

./: .editorconfig  .gitattributes  .gitignore  CITATION.cff  CITATTION.cff  Cargo.toml  LICENSE.md  README.md  justfile
.githooks/pre-commit/: 2-format.sh
.github/actions/setup-nix/: action.yaml
.github/workflows/: format.yaml  normal.yaml
.gitlab/merge_request_templates/: Default.md
.nvim/: nvim-dap.lua  nvim.lua
docs/: code-of-conduct.md  development-guide.md
src/custom-lib/: Cargo.toml
src/custom-lib/src/strings/: suffix.rs
src/main/: Cargo.toml
tools/ci/: general.sh
tools/configs/copier/answers/: generic.yaml  rust.yaml
tools/configs/prettier/: prettierrc.yaml
tools/configs/typos/: typos.toml
tools/configs/yamllint/: yamllint.yaml
tools/just/: nix.just
tools/nix/: flake.nix
tools/nix/flake/: devenv.parts.nix  nixpkgs.parts.nix  treefmt.nix  treefmt.parts.nix
tools/nix/lib/: default.nix  import.nix  lib.parts.nix  shell.nix  toolchain-files.nix  toolchains.nix
tools/nix/overlays/rust/: default.nix
tools/nix/shells/: default.parts.nix  general.parts.nix  toolchain-generic.nix  toolchain-rust.nix  toolchain.nix
tools/nix/shells/ci/: default.nix
tools/nix/shells/default/: default.nix
tools/nix/shells/format/: default.nix
tools/nix/toolchains/: toolchain-general.nix  toolchain-generic.nix  toolchain-rust.nix
tools/scripts/: lint-rust.sh  lint-ub-rust.sh  setup-config-files.sh  setup.sh
